--- a/BestPracticesProject/BestPracticesProject.WebAPI/appsettings.Development.json
+++ b/BestPracticesProject/BestPracticesProject.WebAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SqlConnection": "server=MAKINA\\SQLEXPRESS01; database= BestPracDb; integrated security=true;TrustServerCertificate=True"
   }
 }
