--- a/BestPracticesProject/BestPracticesProject.Services/BestPracticesProject.Services.csproj
+++ b/BestPracticesProject/BestPracticesProject.Services/BestPracticesProject.Services.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
+	  <PackageReference Include="FluentValidation" Version="12.0.0" />
+	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <ProjectReference Include="..\BestPracticesProject.Repositories\BestPracticesProject.Repositories.csproj" />
   </ItemGroup>
 
